feat: created header

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="header__flex-container">
+          <div class="header__logo">
+            <img src="./assets/nike-logo.svg" alt="nike logo" />
+          </div>
+          <nav class="header__nav">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Boys</a></li>
+              <li><a href="#">Girls</a></li>
+              <li><a href="#">Customize</a></li> 
+            </ul> 
+          </nav> 
+          <div class="header__social">
+            <ul>
+              <li>
+                <a href="#"><img src="./assets/facebook-icon.svg" alt="facebook icon" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./assets/instagram-icon.svg" alt="instagram icon" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./assets/youtube-icon.svg" alt="youtube icon" /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </header>
+    </div>
+  </body>
 </html>
