feat: created colors block in main

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
               <li><a href="#">Home</a></li>
               <li><a href="#">Boys</a></li>
               <li><a href="#">Girls</a></li>
-              <li><a href="#">Customize</a></li> 
-            </ul> 
-          </nav> 
+              <li><a href="#">Customize</a></li>
+            </ul>
+          </nav>
           <div class="header__social">
             <ul>
               <li>
@@ -36,6 +36,21 @@
           </div>
         </div>
       </header>
+      <main class="main">
+        <div class="main-description">
+          <h1>Nothing Can Stop The Run</h1>
+          <div class="main-description__colors">
+            <h2>Colors</h2>
+            <ul>
+              <li><button type="button" data-color="pink"></button></li>
+              <li><button data-color="blue"></button></li>
+              <li><button data-color="purple"></button></li>
+              <li><button data-color="green"></button></li>
+              <li><button data-color="black"></button></li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
