feat: created img block

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       </header>
       <main class="main">
         <div class="main-description">
-          <h1>Nothing Can Stop The Run</h1>
+          <h1>Nothing Can<br /><span>Stop</span> The Run</h1>
           <div class="main-description__colors">
             <h2>Colors</h2>
             <ul>
@@ -46,9 +46,12 @@
               <li><button data-color="blue"></button></li>
               <li><button data-color="purple"></button></li>
               <li><button data-color="green"></button></li>
-              <li><button data-color="black"></button></li>
+              <li><button data-color="black"></button></li>  
             </ul>
           </div>
+        </div>
+        <div class="main-image">
+          <img src="./assets/sneacker-banner.png" alt="sneacker" />
         </div>
       </main>
     </div>
