--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,6 @@
           <div class="header__logo">
             <img src="./assets/nike-logo.svg" alt="nike logo" />
           </div>
-          <nav class="header__nav">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Boys</a></li>
-              <li><a href="#">Girls</a></li>
-              <li><a href="#">Customize</a></li>
-            </ul>
-          </nav>
           <div class="header__social">
             <ul>
               <li>
@@ -34,6 +26,15 @@
               </li>
             </ul>
           </div>
+          <nav class="header__nav">
+            <div class="burger"><span></span></div>
+            <ul class="nav-list">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Boys</a></li>
+              <li><a href="#">Girls</a></li>
+              <li><a href="#">Customize</a></li>
+            </ul>
+          </nav>
         </div>
       </header>
       <main class="main">
@@ -46,7 +47,7 @@
               <li><button data-color="blue"></button></li>
               <li><button data-color="purple"></button></li>
               <li><button data-color="green"></button></li>
-              <li><button data-color="black"></button></li>  
+              <li><button data-color="black"></button></li>
             </ul>
           </div>
         </div>
